@@ -11,10 +11,6 @@ module Webrat
       @integration_session = session
     end
 
-    def doc_root
-      File.expand_path(File.join(RAILS_ROOT, 'public'))
-    end
-
     def get(url, data, headers = nil)
       do_request(:get, url, data, headers)
     end
