@@ -76,7 +76,4 @@ describe Webrat::RailsAdapter do
     end
   end
 
-  it "should provide a doc_root" do
-    Webrat::RailsAdapter.new(mock("integration session")).should respond_to(:doc_root)
-  end
 end
