@@ -3,7 +3,8 @@
   * Save and open page directory specified via configuration (Noah Davis)
 
 * Bug fixes
-
+  
+  * Removed save_and_open_page's rewriting of static asset paths before saving (was not actually working) (Noah Davis)
   * Make "should contain" ignore extra whitespace when doing string comparisons (Noah Davis)
   * Make selenium matchers handle negative match more consistently with positive match (Luke Melia)
    
